# posx

./: .gitignore  .prettierrc  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
pos_asset/: pos_asset.json  pos_asset.py  test_pos_asset.py
posx/: __init__.py  hooks.py  modules.txt  patches.txt  utils.py
posx/api/: label_printer.py  pos.py  queries.py  sales_invoice.py  xz_report.py
posx/config/: desktop.py  docs.py  selling.py  stock.py
posx/doc_events/: pos_profile.py  purchase_invoice.py  purchase_receipt.py  stock_entry.py
posx/fixtures/: custom_field.json  website_theme.json
posx/overrides/: get_item_details.py  pos_invoice.py
posx/patches/v13_0/: migrate_to_upstream_batch_price.py  remove_pos_profile_custom_fields.py
posx/pos_x/doctype/label_printer/: label_printer.js  label_printer.json  label_printer.py  test_label_printer.py
posx/pos_x/doctype/label_printer_item/: label_printer_item.json  label_printer_item.py
posx/pos_x/doctype/pos_asset/: pos_asset.js  pos_asset.json  pos_asset.py
posx/pos_x/doctype/pos_x_settings/: pos_x_settings.js  pos_x_settings.json  pos_x_settings.py  test_pos_x_settings.py
posx/pos_x/doctype/xz_report/: test_xz_report.py  xz_report.js  xz_report.json  (+1 more)
posx/public/: build.json
posx/public/includes/: point_of_sale.js  sales_invoice.js  service-worker.js
posx/public/js/: index.js  posx-pos.bundle.js  posx.bundle.js  version.js
posx/public/scss/: pos.scss  posx-pos.bundle.scss  posx-print.bundle.scss
posx/templates/includes/: pf_barcode_label_st_24.html.j2
(+116 files in other folders)
